2009-06-17  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_job_process.c (test_handler): Add test cases for a
	respawning job failing while it's post-start or pre-stop processes
	are still running while making sure that it still respawns afterwards.
	* init/job_process.c (job_process_terminated): To fix it, check for
	a running post-start or pre-stop process before checking for a the
	respawn.  That's not enough because then we won't respawn when the
	existing process finishes, so use the goal as a hint.
	* init/job.c (job_next_state): Use that hint goal here, remembering
	to set the goal back to JOB_START afterwards.
	(job_change_goal): Nothing to do in the respawn case
	(job_goal_name, job_goal_from_name): Add the new values
	* init/job.h (job_goal): Add the respawn goal
	* init/tests/test_job.c (test_next_state): Add tests for the respawn
	goal
	(test_goal_name, test_goal_from_name): Tests for the new values

	* configure.ac (AC_CONFIG_FILES): dbus goes before init just in case
	we ever do anything to them later

	* init/job_class.c (job_class_register, job_class_unregister): Update
	name of signal functions that we call.
	(job_class_interfaces): No need to declare this separately
	* init/job.c (job_register, job_change_state): Update name of signal
	functions.
	(job_interfaces): Drop, it comes from the generated header now
	* init/control.c (manager_interfaces): Drop, comes from the header
	as control_interfaces
	(control_register_all): Change array name
	* init/tests/test_job_class.c,
	* init/tests/test_job.c,
	* init/tests/test_control.c,
	* init/tests/test_blocked.c: Rename conn member of NihDBusMessage
	to connection

	* dbus/com.ubuntu.Upstart.xml,
	* dbus/com.ubuntu.Upstart.Job.xml,
	* dbus/com.ubuntu.Upstart.Instance.xml: Use annotation to mark the
	methods as async, rather than a namespaced attribute.  Omit the
	interface symbol.
	* init/Makefile.am (AM_CPPFLAGS): Add builddir to the quoted includes